Avoid using List.of() to keep java 8 support